# rust-strings

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml  rust_strings.pyi
.github/workflows/: build.yml  release.yml  release_python.yml  release_rust.yml
src/: encodings.rs  lib.rs  main.rs  python_bindings.rs  strings.rs  strings_extractor.rs  strings_writer.rs
tests/: test_lib.rs  test_python_bindings.py
