[package]
name = "rust-strings"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_strings"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-strings"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.8", features = ["derive"] }
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.3"

[features]
python_bindings = ["pyo3"]
