[package]
name = "rust-strings"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["iddohau@gmail.com"]
description = "`rust-strings` is a library to extract ascii strings from binary data"
readme = "README.md"
documentation = "https://docs.rs/rust-strings"
repository = "https://github.com/iddohau/rust-strings"
homepage = "https://github.com/iddohau/rust-strings"
keywords = ["strings", "encoding"]
categories = ["encoding"]
include = ["/LICENSE.txt", "/README.md", "/src", "/pyproject.toml"]

[lib]
name = "rust_strings"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-strings"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "3.0.8", features = ["derive"], optional = true }
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.3"

[features]
python_bindings = ["pyo3"]
cli = ["clap"]
