[build-system]
requires = ["maturin>=0.14,<0.15", "cffi"]
build-backend = "maturin"


[project]
name = "rust-strings"
version = "0.3.0"
description = "Extract strings from binary data"
authors = [
    {email = "iddohau@gmail.com", name = "Iddo Hauschner"},
]
maintainers = [
    {email = "iddohau@gmail.com", name = "Iddo Hauschner"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.7"
homepage = "https://github.com/iddohau/rust-strings"
repository = "https://github.com/iddohau/rust-strings"
documentation = "https://github.com/iddohau/rust-strings"

keywords = ["strings"]

classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
]

[dev-dependencies]
pytest = "^7.2.0"
